syntax = "proto3";

option csharp_namespace = "Saas.Entity.App";

package App;

message Keys{
  message Key{
    int32 Key = 1;
    int32 RootId = 2;
    int32 Object_id = 3;
    int32 Id = 4;   
    string Code = 5;    
  }
  repeated Key values = 1;
}
message French{
  message Value{
   int32 Key = 1;
   string Val = 3;
	}
  repeated Value values = 1;
}
message English{
  message Value{
   int32 Key = 1;
   string Val = 3;
	}
  repeated Value values = 1;
}
message Vietnamese{
  message Value{
   int32 Key = 1;  
   string Val = 3;
	}
  repeated Value values = 1;
}
message KeyTypes{
  message KeyType{
   int32 Id = 1;
   string Name = 2;
   int32 MaxLen = 3;
	}
  repeated KeyType values = 1;
}
message States{
  message State{
    int32 Id = 1;
    string Name = 2;
  }
  repeated State values = 1;
}
message Languages{
  message Language{
    int32 Id = 1;
    string Code = 2;
    string Value = 3;
  }
  repeated Language values = 1;
}
message AppSetting{
  int32 Id = 1;
  int32 NameKey = 2;
  int32 DescriptionKey = 3;
}